force-app/main/default/objects/Opportunity/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <description>Category of yacht expense for tracking and reporting</description>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Docking</fullName>
            </value>
            <value>
                <fullName>Crew</fullName>
            </value>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>