force-app/main/default/objects/Opportunity/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Payment</fullName>
                <default>true</default>
                <label>Pending Payment</label>
            </value>
            <value>
                <fullName>Payment Processing</fullName>
            </value>
            <value>
                <fullName>Payment Completed</fullName>
            </value>
            <value>
                <fullName>Payment Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>