force-app/main/default/objects/Opportunity/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Name of vendor providing service</description>
    <label>Vendor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>